// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="material-icons checkboxUnchecked"
  >
    radio_button_unchecked
    <input
      hidden=""
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;

exports[`<Checkbox /> when checked and classname specified should render properly  1`] = `
<DocumentFragment>
  <div
    class="material-icons checkboxChecked extClassName"
  >
    check_circle
    <input
      checked=""
      hidden=""
      type="checkbox"
    />
  </div>
</DocumentFragment>
`;
